@@ -1,6 +1,6 @@
 # This testcase is part of GDB, the GNU debugger.
 
-# Copyright 2007-2013 Free Software Foundation, Inc.
+# Copyright 2007, 2009, 2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,13 +19,15 @@
 
 load_lib gdbserver-support.exp
 
-standard_testfile server.c
+set testfile "server"
+set srcfile ${testfile}.c
+set binfile ${objdir}/${subdir}/ext-run
 
 if { [skip_gdbserver_tests] } {
     return 0
 }
 
-if {[build_executable $testfile.exp $testfile $srcfile debug] == -1} {
+if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
     return -1
 }
 
@@ -37,10 +39,6 @@ set do_xml_test [expr ![gdb_skip_xml_test]]
 gdb_start
 gdb_load $binfile
 gdb_reinitialize_dir $srcdir/$subdir
-
-# Make sure we're disconnected, in case we're testing with an
-# extended-remote board, therefore already connected.
-gdb_test "disconnect" ".*"
 
 set target_exec [gdbserver_download_current_prog]
 gdbserver_start_extended
@@ -54,10 +52,7 @@ if { [istarget *-*-linux*] } {
     # On Linux, gdbserver can also report the list of processes.
     # But only if xml support is compiled in.
     if { $do_xml_test } {
-	# This is done in a way to avoid the timeout that can occur from
-	# applying .* regexp to large output.
-	gdb_test_sequence "info os processes" "get process list" \
-	    { "pid +user +command" "1 +root +\[/a-z\]*(init|systemd)" }
+	gdb_test "info os processes" ".*pid +user +command.*1 +root +\[/a-z\]*init.*" "get process list"
     }
 }
 
